list(APPEND CPPFLAGS -DTORONTO)
list(APPEND LDFLAGS -lm)
if(LARGE_PROBLEM_SIZE)
  set(RUN_OPTIONS 40000 30)
elseif(EXTRA_LARGE_PROBLEM_SIZE)
  set(RUN_OPTIONS 200000 30)
else()
  if(SMALL_PROBLEM_SIZE)
    set(RUN_OPTIONS 2000 5)
  else()
    set(RUN_OPTIONS 20000 20)
  endif()
endif()
llvm_multisource(bh)

# Checked C header files.
find_path(SAFEMM_HEADER safe_mm_checked.h)
target_include_directories(bh PUBLIC ${SAFEMM_HEADER})
# Checked C library
find_library(LIB_SAFEMM safemm)
target_link_libraries(bh ${LIB_SAFEMM})
